# Newbies-BFMC2026

./: .gitmodules  README.md  main  main.c  main.py  package-lock.json  package.json  test_msg.py
Calibration/IMU_BNO055_starfruit/Code_calib_IMU/: code_reuse_calib_profile_of_calib.ino  code_show_calib_profile  code_store_calib_profile_to_eeprom.ino
Project_status/project_status_1/: progress-video-January.txt
Project_status/project_status_2/: progress-video-February.txt  progress-video-february.txt
calibration/source/drivers/: speedingmotor.cpp  steeringmotor.cpp
main.dSYM/Contents/Resources/DWARF/: main
monitoring/: project-plan.md
src/: main.py
src/Perception/: perception_system.py
src/Planning/: planning_system.py
src/dashboard/frontend/: package-lock.json  package.json
src/dashboard/frontend/.angular/cache/18.2.9/dashboard/: .tsbuildinfo
src/dashboard/frontend/src/app/webSocket/: web-socket.service.ts
src/planning_ws/devel/: .catkin  _setup_util.py  setup.sh
src/planning_ws/devel/include/utils/: IMU.h  ImgInfo.h  Lane.h  Lane2.h  Lane3.h  Point2D.h  Sensors.h  Sign.h  encoder.h  go_to.h  go_toRequest.h  go_toResponse.h  go_to_multiple.h  go_to_multipleRequest.h  go_to_multipleResponse.h  goto_command.h  goto_commandRequest.h  goto_commandResponse.h  localisation.h  odometry.h  set_states.h  set_statesRequest.h  set_statesResponse.h  waypoints.h  waypointsRequest.h  waypointsResponse.h
src/planning_ws/devel/lib/path_planning/: path_manager_node  sensing_node
src/planning_ws/devel/lib/persistence/: db
src/planning_ws/devel/lib/pkgconfig/: alglib_pkg.pc  communication.pc  path_planning.pc  persistence.pc  utils.pc
src/planning_ws/devel/lib/python3/dist-packages/utils/msg/: _Lane.py  _Lane2.py  _Lane3.py  _Point2D.py  _Sign.py  __init__.py
src/planning_ws/devel/lib/python3/dist-packages/utils/srv/: __init__.py  _go_to.py  _go_to_multiple.py  _goto_command.py  _set_states.py  _waypoints.py
src/planning_ws/devel/share/alglib_pkg/cmake/: alglib_pkgConfig.cmake
src/planning_ws/devel/share/common-lisp/ros/utils/msg/: Lane.lisp  Lane2.lisp  Lane3.lisp  Point2D.lisp  Sign.lisp  _package.lisp  _package_Lane.lisp  _package_Lane2.lisp  _package_Lane3.lisp  _package_Point2D.lisp  _package_Sign.lisp  utils-msg.asd
src/planning_ws/devel/share/common-lisp/ros/utils/srv/: _package.lisp  _package_go_to.lisp  _package_go_to_multiple.lisp  _package_goto_command.lisp  _package_set_states.lisp  _package_waypoints.lisp  go_to.lisp  go_to_multiple.lisp  goto_command.lisp  set_states.lisp  utils-srv.asd  waypoints.lisp
src/planning_ws/devel/share/communication/cmake/: communicationConfig.cmake
src/planning_ws/devel/share/gennodejs/ros/utils/msg/: Lane.js  Lane2.js  Lane3.js  Point2D.js  Sign.js  _index.js
src/planning_ws/devel/share/path_planning/cmake/: path_planningConfig.cmake
src/planning_ws/devel/share/persistence/cmake/: persistenceConfig.cmake
src/planning_ws/devel/share/roseus/ros/utils/: manifest.l
src/planning_ws/devel/share/utils/cmake/: utils-msg-extras.cmake  utils-msg-paths.cmake  utilsConfig.cmake
src/planning_ws/src/alglib/: CMakeLists.txt  package.xml
src/planning_ws/src/communication/: CMakeLists.txt  Doxyfile  README.md
src/planning_ws/src/communication/docs/figures/: protocol.odg
src/planning_ws/src/communication/include/: Decoder.hpp  Encoder.hpp  TcpClient.hpp
src/planning_ws/src/communication/include/msg/: ImuMsg.hpp  Lane2Msg.hpp  ParamsMsg.hpp  RunMsg.hpp  SWLoadMsg.hpp  TriggerMsg.hpp
src/planning_ws/src/communication/include/service_calls/: GoToCmdSrv.hpp  GoToSrv.hpp  SetStatesSrv.hpp  WaypointsSrv.hpp
src/planning_ws/src/communication/src/: Encoder.cpp  TcpClient.cpp
src/planning_ws/src/communication/src/msg/: ImuMsg.cpp  Lane2Msg.cpp  ParamsMsg.cpp  RunMsg.cpp  SWLoadMsg.cpp  TriggerMsg.cpp
src/planning_ws/src/communication/src/service_calls/: GoToCmdSrv.cpp  GoToSrv.cpp  SetStatesSrv.cpp  WaypointsSrv.cpp
src/planning_ws/src/path_planning/: CMakeLists.txt
src/planning_ws/src/path_planning/include/path_planning/map/: GroundTruth.h  Track.hpp
src/planning_ws/src/path_planning/include/path_planning/planning/: PathManager.h  PathPlanner.hpp
src/planning_ws/src/path_planning/include/path_planning/utils/: KalmanFilter.h  PathUtils.hpp  Sensing.h  SerialBridge.h  SplineUtils.hpp  Tracking.h  TrafficClient.hpp  Tunable.h  Utility.hpp
src/planning_ws/src/path_planning/src/: path_manager_node.cpp
src/planning_ws/src/path_planning/src/map/: Track.cpp
src/planning_ws/src/path_planning/src/persistence/: planner.py  runs.yaml  runs0412_modified.yaml  runs0429_modified.yaml  runs_136removed_modified.yaml  runs_noright_modified.yaml  track.graphml  track0514.graphml  track22.graphml  track_0511.graphml  track_0511_noright.graphml  track_left.graphml  track_noright.graphml  trackold.graphml
src/planning_ws/src/path_planning/src/planning/: PathPlanner.cpp
src/planning_ws/src/path_planning/src/utils/: PathUtils.cpp  SplineUtils.cpp  TrafficClient.cpp  Utility.cpp  sensing_node.cpp
src/planning_ws/src/persistence/: .gitignore  CMakeLists.txt
src/planning_ws/src/persistence/include/: Database.hpp
src/planning_ws/src/persistence/include/queries/: CameraQueries.hpp  GraphQueries.hpp
src/planning_ws/src/persistence/launch/: database.launch
src/planning_ws/src/persistence/sqlite3/: CMakeLists.txt  LICENSE  README.md
src/planning_ws/src/persistence/src/: Database.cpp  Main.cpp
src/planning_ws/src/persistence/src/queries/: CameraQueries.cpp  GraphQueries.cpp
src/planning_ws/src/persistence/src/tables/: camera_params.sql  graph.sql  realsense_tf.sql
src/planning_ws/src/utils/: CMakeLists.txt  package.xml
src/planning_ws/src/utils/include/utils/: constants.h  get_constants.py  helper.h
src/planning_ws/src/utils/msg/: Lane2.msg  Lane3.msg  Sign.msg
src/planning_ws/src/utils/scripts/: memory.py  realsense_params.py
src/planning_ws/src/utils/src/utils/: constants.cpp
src/planning_ws/src/utils/srv/: go_to_multiple.srv  set_states.srv  waypoints.srv
src/utils/messages/: allMessages.py
(+16 files in other folders)
